2001-02-24  Christoph Pfisterer  <cp@chrisp.de>

	* FinkVersion.pm: new module for storing the version number.

2001-02-18  Christoph Pfisterer  <cp@chrisp.de>

	* Released version 0.1.5. Started using CVS and ChangeLogs.
