@@ -1,3 +1,7 @@
+2001-03-01  Christoph Pfisterer  <cp@chrisp.de>
+
+	* PkgVersion.pm: added support for multiple tarballs per package.
+
 2001-02-24  Christoph Pfisterer  <cp@chrisp.de>
 
 	* FinkVersion.pm: new module for storing the version number.
